# k230_sdk-big

mpp/: CMakeLists.txt
mpp/include/comm/: k_autoconf_comm.h  k_cipher_comm.h  k_dpu_comm.h  k_vdss_comm.h
mpp/include/ioctl/: k_connector_ioctl.h
mpp/userapp/api/: mpi_cipher_api.h  mpi_connector_api.h  mpi_dpu_api.h  mpi_vdss_api.h
user_app_startup/: CMakeLists.txt
user_app_startup/lib/rt-smart/template/hello_linux_cmake/: CMakeLists.txt
